# src/Shared/Dtos/Authentication/InRegisterDto.cs
@@ -1,0 +1,8 @@
+namespace Shared.Dtos.Authentication;
+
+public class InRegisterDto
+{
+    public string? FullName { get; set; }
+    public string? Username { get; set; }
+    public string? Password { get; set; }
+}
