# src/Shared/Dtos/User/InUserAddDto.cs
@@ -1,6 +1,0 @@
-namespace Shared.Dtos.User;
-
-public class InUserAddDto : InUserDto
-{
-    public string? Password { get; set; }
-}
